# nonebot-adapter-httpserver

./: LICENSE  README.md  pyproject.toml
docs/: logo.jfif
nonebot/adapters/httpserver/: adapter.py  bot.py  config.py  event.py  message.py
